--- a/testMVC-Login/public/assets/css/style.css
+++ b/testMVC-Login/public/assets/css/style.css
@@ -2,6 +2,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  max-width: 70%;
+  /* max-width: 90%; */
+  margin: 0 auto;
 }
 
 header {
@@ -11,7 +14,7 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
