--- a/estilzacao/src/css/home.css
+++ b/estilzacao/src/css/home.css
@@ -11,26 +11,36 @@
 }
 
 .tecnology {
+  width: 100%;
   display: flex;
+  gap: 50px;
   flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
 }
 
 .tec-text {
-  max-width: 400px;
+  width: 50%;
   text-align: justify;
 }
 
 .tec-container {
   display: flex;
   flex-direction: column;
+  width: 50%;
   gap: 20px;
   margin: 100px 0px;
 }
 
+.tec-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
 .tec-img {
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
 }
 
 .dev-container {
