--- a/estilzacao/src/css/style.css
+++ b/estilzacao/src/css/style.css
@@ -1,9 +1,16 @@
 body {
+  background-color: red;
   display: flex;
   flex-direction: column;
   width: 70%;
   margin: 0 auto;
   min-height: 100vh;
+}
+
+@media (max-width: 1300px) {
+  body {
+    width: 90%;
+  }
 }
 
 header {
