testes de funcionalidade

--- a/testMVC-Login/public/assets/css/style.css
+++ b/testMVC-Login/public/assets/css/style.css
@@ -157,7 +157,7 @@ footer {
 
 /*Produtos - Style Abaixo*/
 
-table,
+/* table,
 td table {
   width: 46.875rem;
   border: 1px solid black;
@@ -206,4 +206,4 @@ td:last-child {
 
 .botaoExcluir {
   background-color: red;
-}
+} */
